Working on Assignment 3

--- a/2_fullyconnected.ipynb
+++ b/2_fullyconnected.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 15,
    "metadata": {
     "cellView": "both",
     "colab": {
@@ -30,6 +30,7 @@
      }
     },
     "colab_type": "code",
+    "collapsed": true,
     "id": "JLpLa8Jt7Vu4"
    },
    "outputs": [],
@@ -55,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 16,
    "metadata": {
     "cellView": "both",
     "colab": {
@@ -131,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 17,
    "metadata": {
     "cellView": "both",
     "colab": {
@@ -195,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -241,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 19,
    "metadata": {
     "cellView": "both",
     "colab": {
@@ -313,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 20,
    "metadata": {
     "cellView": "both",
     "colab": {
@@ -353,34 +354,34 @@
      "output_type": "stream",
      "text": [
       "Initialized\n",
-      "Loss at step 0: 17.573622\n",
-      "Training accuracy: 8.9%\n",
-      "Validation accuracy: 11.8%\n",
-      "Loss at step 100: 2.301588\n",
-      "Training accuracy: 71.9%\n",
-      "Validation accuracy: 70.2%\n",
-      "Loss at step 200: 1.844453\n",
-      "Training accuracy: 75.4%\n",
-      "Validation accuracy: 72.5%\n",
-      "Loss at step 300: 1.608436\n",
+      "Loss at step 0: 15.014809\n",
+      "Training accuracy: 13.8%\n",
+      "Validation accuracy: 16.2%\n",
+      "Loss at step 100: 2.237234\n",
+      "Training accuracy: 72.3%\n",
+      "Validation accuracy: 70.5%\n",
+      "Loss at step 200: 1.818341\n",
+      "Training accuracy: 75.1%\n",
+      "Validation accuracy: 72.3%\n",
+      "Loss at step 300: 1.589212\n",
       "Training accuracy: 76.4%\n",
-      "Validation accuracy: 73.5%\n",
-      "Loss at step 400: 1.449976\n",
-      "Training accuracy: 77.2%\n",
+      "Validation accuracy: 73.2%\n",
+      "Loss at step 400: 1.432080\n",
+      "Training accuracy: 77.6%\n",
+      "Validation accuracy: 73.7%\n",
+      "Loss at step 500: 1.313250\n",
+      "Training accuracy: 78.4%\n",
       "Validation accuracy: 74.0%\n",
-      "Loss at step 500: 1.331864\n",
-      "Training accuracy: 77.9%\n",
-      "Validation accuracy: 74.2%\n",
-      "Loss at step 600: 1.238387\n",
-      "Training accuracy: 78.3%\n",
-      "Validation accuracy: 74.3%\n",
-      "Loss at step 700: 1.161728\n",
+      "Loss at step 600: 1.218575\n",
       "Training accuracy: 78.8%\n",
-      "Validation accuracy: 74.4%\n",
-      "Loss at step 800: 1.097368\n",
+      "Validation accuracy: 74.2%\n",
+      "Loss at step 700: 1.140715\n",
       "Training accuracy: 79.2%\n",
-      "Validation accuracy: 74.6%\n",
-      "Test accuracy: 82.6%\n"
+      "Validation accuracy: 74.4%\n",
+      "Loss at step 800: 1.075276\n",
+      "Training accuracy: 79.4%\n",
+      "Validation accuracy: 74.5%\n",
+      "Test accuracy: 82.7%\n"
      ]
     }
    ],
@@ -428,7 +429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 21,
    "metadata": {
     "cellView": "both",
     "colab": {
@@ -488,7 +489,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 22,
    "metadata": {
     "cellView": "both",
     "colab": {
@@ -528,28 +529,28 @@
      "output_type": "stream",
      "text": [
       "Initialized\n",
-      "Minibatch loss at step 0: 15.734413\n",
-      "Minibatch accuracy: 13.3%\n",
-      "Validation accuracy: 13.2%\n",
-      "Minibatch loss at step 500: 1.680649\n",
-      "Minibatch accuracy: 76.6%\n",
-      "Validation accuracy: 75.8%\n",
-      "Minibatch loss at step 1000: 1.451457\n",
-      "Minibatch accuracy: 75.8%\n",
-      "Validation accuracy: 76.2%\n",
-      "Minibatch loss at step 1500: 0.800499\n",
-      "Minibatch accuracy: 82.8%\n",
-      "Validation accuracy: 76.7%\n",
-      "Minibatch loss at step 2000: 0.813287\n",
-      "Minibatch accuracy: 84.4%\n",
-      "Validation accuracy: 77.3%\n",
-      "Minibatch loss at step 2500: 0.793954\n",
+      "Minibatch loss at step 0: 16.939404\n",
+      "Minibatch accuracy: 10.2%\n",
+      "Validation accuracy: 10.3%\n",
+      "Minibatch loss at step 500: 1.224217\n",
+      "Minibatch accuracy: 79.7%\n",
+      "Validation accuracy: 75.0%\n",
+      "Minibatch loss at step 1000: 1.172686\n",
       "Minibatch accuracy: 78.1%\n",
-      "Validation accuracy: 77.8%\n",
-      "Minibatch loss at step 3000: 0.972884\n",
-      "Minibatch accuracy: 78.9%\n",
-      "Validation accuracy: 78.9%\n",
-      "Test accuracy: 86.4%\n"
+      "Validation accuracy: 76.3%\n",
+      "Minibatch loss at step 1500: 0.909039\n",
+      "Minibatch accuracy: 75.8%\n",
+      "Validation accuracy: 76.4%\n",
+      "Minibatch loss at step 2000: 0.946838\n",
+      "Minibatch accuracy: 82.0%\n",
+      "Validation accuracy: 76.8%\n",
+      "Minibatch loss at step 2500: 0.725152\n",
+      "Minibatch accuracy: 78.1%\n",
+      "Validation accuracy: 77.5%\n",
+      "Minibatch loss at step 3000: 1.035898\n",
+      "Minibatch accuracy: 80.5%\n",
+      "Validation accuracy: 78.0%\n",
+      "Test accuracy: 85.8%\n"
      ]
     }
    ],
@@ -598,8 +599,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
+   "execution_count": 23,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def create_nn(dataset, weights_hidden, biases_hidden, weights_out, biases_out):\n",
@@ -657,7 +660,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -665,28 +668,28 @@
      "output_type": "stream",
      "text": [
       "Initialized\n",
-      "Minibatch loss at step 0: 521.475830\n",
-      "Minibatch accuracy: 10.9%\n",
-      "Validation accuracy: 32.3%\n",
-      "Minibatch loss at step 500: 22.582809\n",
-      "Minibatch accuracy: 79.7%\n",
-      "Validation accuracy: 79.1%\n",
-      "Minibatch loss at step 1000: 13.391073\n",
-      "Minibatch accuracy: 75.8%\n",
-      "Validation accuracy: 80.4%\n",
-      "Minibatch loss at step 1500: 4.919155\n",
-      "Minibatch accuracy: 81.2%\n",
-      "Validation accuracy: 79.3%\n",
-      "Minibatch loss at step 2000: 2.638756\n",
-      "Minibatch accuracy: 85.9%\n",
-      "Validation accuracy: 80.5%\n",
-      "Minibatch loss at step 2500: 3.447139\n",
-      "Minibatch accuracy: 88.3%\n",
-      "Validation accuracy: 82.0%\n",
-      "Minibatch loss at step 3000: 2.134212\n",
+      "Minibatch loss at step 0: 318.553772\n",
+      "Minibatch accuracy: 11.7%\n",
+      "Validation accuracy: 28.1%\n",
+      "Minibatch loss at step 500: 19.084730\n",
+      "Minibatch accuracy: 82.0%\n",
+      "Validation accuracy: 78.8%\n",
+      "Minibatch loss at step 1000: 14.649524\n",
+      "Minibatch accuracy: 77.3%\n",
+      "Validation accuracy: 80.3%\n",
+      "Minibatch loss at step 1500: 13.918678\n",
+      "Minibatch accuracy: 84.4%\n",
+      "Validation accuracy: 79.7%\n",
+      "Minibatch loss at step 2000: 2.206720\n",
+      "Minibatch accuracy: 86.7%\n",
+      "Validation accuracy: 81.2%\n",
+      "Minibatch loss at step 2500: 3.574601\n",
       "Minibatch accuracy: 83.6%\n",
-      "Validation accuracy: 80.8%\n",
-      "Test accuracy: 89.1%\n"
+      "Validation accuracy: 82.2%\n",
+      "Minibatch loss at step 3000: 1.707761\n",
+      "Minibatch accuracy: 81.2%\n",
+      "Validation accuracy: 82.8%\n",
+      "Test accuracy: 89.6%\n"
      ]
     }
    ],
