Figured out how to not maintain multiple networks

--- a/3_regularization.ipynb
+++ b/3_regularization.ipynb
@@ -987,8 +987,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Trying both L2 and dropout to improve score. It didn't work with dropout"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -996,80 +1003,59 @@
      "output_type": "stream",
      "text": [
       "Initialized\n",
-      "Minibatch loss at step 0: 1015.328613\n",
-      "Minibatch accuracy: 9.4%\n",
-      "Validation accuracy: 36.4%\n",
-      "Minibatch loss at step 500: 281.394012\n",
-      "Minibatch accuracy: 72.7%\n",
-      "Validation accuracy: 78.2%\n",
-      "Minibatch loss at step 1000: 144.637878\n",
-      "Minibatch accuracy: 65.6%\n",
-      "Validation accuracy: 76.8%\n",
-      "Minibatch loss at step 1500: 83.155983\n",
-      "Minibatch accuracy: 59.4%\n",
-      "Validation accuracy: 75.3%\n",
-      "Minibatch loss at step 2000: 44.992840\n",
-      "Minibatch accuracy: 71.9%\n",
-      "Validation accuracy: 79.1%\n",
-      "Minibatch loss at step 2500: 27.015707\n",
-      "Minibatch accuracy: 75.0%\n",
-      "Validation accuracy: 81.2%\n",
-      "Minibatch loss at step 3000: 16.641855\n",
-      "Minibatch accuracy: 71.9%\n",
-      "Validation accuracy: 82.0%\n",
-      "Minibatch loss at step 3500: 10.309994\n",
-      "Minibatch accuracy: 75.0%\n",
-      "Validation accuracy: 82.9%\n",
-      "Minibatch loss at step 4000: 6.547911\n",
-      "Minibatch accuracy: 82.0%\n",
-      "Validation accuracy: 83.3%\n",
-      "Minibatch loss at step 4500: 4.207744\n",
-      "Minibatch accuracy: 82.0%\n",
-      "Validation accuracy: 83.2%\n",
-      "Minibatch loss at step 5000: 2.902948\n",
-      "Minibatch accuracy: 80.5%\n",
-      "Validation accuracy: 83.5%\n",
-      "Minibatch loss at step 5500: 2.143765\n",
-      "Minibatch accuracy: 75.0%\n",
-      "Validation accuracy: 83.4%\n",
-      "Minibatch loss at step 6000: 1.690592\n",
-      "Minibatch accuracy: 68.8%\n",
-      "Validation accuracy: 83.8%\n",
-      "Minibatch loss at step 6500: 1.180443\n",
-      "Minibatch accuracy: 81.2%\n",
-      "Validation accuracy: 84.0%\n",
-      "Minibatch loss at step 7000: 1.158814\n",
-      "Minibatch accuracy: 75.0%\n",
-      "Validation accuracy: 84.1%\n",
-      "Minibatch loss at step 7500: 1.028856\n",
-      "Minibatch accuracy: 76.6%\n",
-      "Validation accuracy: 84.3%\n",
-      "Minibatch loss at step 8000: 1.303900\n",
-      "Minibatch accuracy: 71.9%\n",
-      "Validation accuracy: 83.5%\n",
-      "Minibatch loss at step 8500: 0.787780\n",
-      "Minibatch accuracy: 82.0%\n",
-      "Validation accuracy: 84.1%\n",
-      "Minibatch loss at step 9000: 1.032031\n",
-      "Minibatch accuracy: 75.8%\n",
-      "Validation accuracy: 84.2%\n",
-      "Minibatch loss at step 9500: 0.813968\n",
-      "Minibatch accuracy: 82.0%\n",
-      "Validation accuracy: 84.4%\n",
-      "Test accuracy: 91.5%\n"
+      "Minibatch loss at step 0: 645.994995\n",
+      "Minibatch accuracy: 17.2%\n",
+      "Validation accuracy: 28.5%\n",
+      "Minibatch loss at step 500: 200.008835\n",
+      "Minibatch accuracy: 83.6%\n",
+      "Validation accuracy: 77.8%\n",
+      "Minibatch loss at step 1000: 115.552536\n",
+      "Minibatch accuracy: 79.7%\n",
+      "Validation accuracy: 81.8%\n",
+      "Minibatch loss at step 1500: 68.681511\n",
+      "Minibatch accuracy: 87.5%\n",
+      "Validation accuracy: 82.4%\n",
+      "Minibatch loss at step 2000: 41.363037\n",
+      "Minibatch accuracy: 91.4%\n",
+      "Validation accuracy: 84.7%\n",
+      "Minibatch loss at step 2500: 25.121912\n",
+      "Minibatch accuracy: 90.6%\n",
+      "Validation accuracy: 85.5%\n",
+      "Minibatch loss at step 3000: 15.555079\n",
+      "Minibatch accuracy: 86.7%\n",
+      "Validation accuracy: 86.3%\n",
+      "Minibatch loss at step 3500: 9.594077\n",
+      "Minibatch accuracy: 89.8%\n",
+      "Validation accuracy: 87.1%\n",
+      "Minibatch loss at step 4000: 5.947452\n",
+      "Minibatch accuracy: 90.6%\n",
+      "Validation accuracy: 87.2%\n",
+      "Minibatch loss at step 4500: 3.781648\n",
+      "Minibatch accuracy: 90.6%\n",
+      "Validation accuracy: 87.1%\n",
+      "Minibatch loss at step 5000: 2.553009\n",
+      "Minibatch accuracy: 88.3%\n",
+      "Validation accuracy: 88.0%\n",
+      "Minibatch loss at step 5500: 1.794327\n",
+      "Minibatch accuracy: 86.7%\n",
+      "Validation accuracy: 87.6%\n",
+      "Minibatch loss at step 6000: 1.310500\n",
+      "Minibatch accuracy: 85.2%\n",
+      "Validation accuracy: 88.2%\n",
+      "Test accuracy: 94.0%\n"
      ]
     }
    ],
    "source": [
     "def create_nn(dataset, weights_hidden, biases_hidden, weights_out, biases_out):\n",
     "    # Original layer\n",
-    "    logits = tf.add(tf.matmul(tf_train_dataset, weights_hidden), biases_hidden)\n",
+    "    logits = tf.add(tf.matmul(dataset, weights_hidden), biases_hidden)\n",
     "    # Drop Out layer 1\n",
-    "    logits = tf.nn.dropout(logits, 0.5)\n",
+    "    #logits = tf.nn.dropout(logits, 0.5)\n",
     "    # Hidden Relu layer\n",
     "    logits = tf.nn.relu(logits)\n",
     "    # Drop Out layer 2\n",
-    "    logits = tf.nn.dropout(logits, 0.5)\n",
+    "    #logits = tf.nn.dropout(logits, 0.5)\n",
     "    # Output: Connect hidden layer to a node for each class\n",
     "    logits = tf.add(tf.matmul(logits, weights_out), biases_out)\n",
     "    return logits\n",
@@ -1103,23 +1089,26 @@
     "    \n",
     "    # Training computation.\n",
     "    #logits = tf.matmul(tf_train_dataset, weights_out) + biases_out\n",
-    "    logits = create_nn(tf_train_dataset, weights_hidden, biases_hidden, weights_out, biases_out)\n",
+    "    train_logits = create_nn(tf_train_dataset, weights_hidden, biases_hidden, weights_out, biases_out)\n",
+    "    test_logits = create_nn(tf_test_dataset, weights_hidden, biases_hidden, weights_out, biases_out)\n",
+    "    valid_logits = create_nn(tf_valid_dataset, weights_hidden, biases_hidden, weights_out, biases_out)\n",
     "\n",
-    "    loss = tf.reduce_mean(tf.nn.softmax_cross_entropy_with_logits(labels=tf_train_labels, logits=logits))\n",
+    "    loss = tf.reduce_mean(tf.nn.softmax_cross_entropy_with_logits(labels=tf_train_labels, logits=train_logits))\n",
     "    loss += beta * (tf.nn.l2_loss(weights_hidden) + tf.nn.l2_loss(weights_out))\n",
     "\n",
     "    # Optimizer.\n",
     "    optimizer = tf.train.GradientDescentOptimizer(0.5).minimize(loss)\n",
     "\n",
     "    # Predictions for the training, validation, and test data.\n",
-    "    train_prediction = tf.nn.softmax(logits)\n",
+    "    train_prediction = tf.nn.softmax(train_logits)\n",
     "    #valid_prediction = tf.nn.softmax(tf.matmul(tf_valid_dataset, weights_out) + biases_out)\n",
     "    #test_prediction = tf.nn.softmax(tf.matmul(tf_test_dataset, weights_out) + biases_out)\n",
-    "    valid_prediction = tf.nn.softmax(tf.matmul(tf.nn.relu(tf.matmul(tf_valid_dataset, weights_hidden) + biases_hidden), weights_out) + biases_out)\n",
-    "    test_prediction = tf.nn.softmax(tf.matmul(tf.nn.relu(tf.matmul(tf_test_dataset, weights_hidden) + biases_hidden), weights_out) + biases_out)\n",
+    "    #valid_prediction = tf.nn.softmax(tf.matmul(tf.nn.relu(tf.matmul(tf_valid_dataset, weights_hidden) + biases_hidden), weights_out) + biases_out)\n",
+    "    #test_prediction = tf.nn.softmax(tf.matmul(tf.nn.relu(tf.matmul(tf_test_dataset, weights_hidden) + biases_hidden), weights_out) + biases_out)\n",
+    "    valid_prediction = tf.nn.softmax(valid_logits)\n",
+    "    test_prediction = tf.nn.softmax(test_logits)\n",
     "\n",
-    "\n",
-    "num_steps = 10000\n",
+    "num_steps = 6001\n",
     "\n",
     "with tf.Session(graph=graph) as session:\n",
     "  tf.global_variables_initializer().run()\n",
