--- a/3_regularization.ipynb
+++ b/3_regularization.ipynb
@@ -1216,6 +1216,146 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Example from https://github.com/budmitr/udacity-deep-learning/blob/master/3_regularization.ipynb\n",
+    "They don't use stddev and use dropout and both seem to work"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Initialized\n",
+      "Minibatch loss at step 0: 791.658447\n",
+      "Minibatch accuracy: 10.2%\n",
+      "Validation accuracy: 28.6%\n",
+      "Minibatch loss at step 500: 218.778015\n",
+      "Minibatch accuracy: 82.0%\n",
+      "Validation accuracy: 80.1%\n",
+      "Minibatch loss at step 1000: 125.295578\n",
+      "Minibatch accuracy: 78.1%\n",
+      "Validation accuracy: 80.7%\n",
+      "Minibatch loss at step 1500: 79.520325\n",
+      "Minibatch accuracy: 82.8%\n",
+      "Validation accuracy: 81.2%\n",
+      "Minibatch loss at step 2000: 50.451607\n",
+      "Minibatch accuracy: 89.1%\n",
+      "Validation accuracy: 82.8%\n",
+      "Minibatch loss at step 2500: 33.924656\n",
+      "Minibatch accuracy: 84.4%\n",
+      "Validation accuracy: 83.6%\n",
+      "Minibatch loss at step 3000: 23.557600\n",
+      "Minibatch accuracy: 85.2%\n",
+      "Validation accuracy: 84.4%\n",
+      "Minibatch loss at step 3500: 16.560410\n",
+      "Minibatch accuracy: 87.5%\n",
+      "Validation accuracy: 85.1%\n",
+      "Minibatch loss at step 4000: 11.956594\n",
+      "Minibatch accuracy: 89.1%\n",
+      "Validation accuracy: 85.2%\n",
+      "Minibatch loss at step 4500: 8.795779\n",
+      "Minibatch accuracy: 89.1%\n",
+      "Validation accuracy: 85.8%\n",
+      "Minibatch loss at step 5000: 6.664379\n",
+      "Minibatch accuracy: 89.1%\n",
+      "Validation accuracy: 85.7%\n",
+      "Minibatch loss at step 5500: 5.218938\n",
+      "Minibatch accuracy: 85.2%\n",
+      "Validation accuracy: 85.9%\n",
+      "Minibatch loss at step 6000: 4.122350\n",
+      "Minibatch accuracy: 82.0%\n",
+      "Validation accuracy: 86.4%\n",
+      "Minibatch loss at step 6500: 3.215902\n",
+      "Minibatch accuracy: 87.5%\n",
+      "Validation accuracy: 86.5%\n",
+      "Minibatch loss at step 7000: 2.732545\n",
+      "Minibatch accuracy: 82.8%\n",
+      "Validation accuracy: 86.9%\n",
+      "Minibatch loss at step 7500: 2.320075\n",
+      "Minibatch accuracy: 86.7%\n",
+      "Validation accuracy: 87.0%\n",
+      "Minibatch loss at step 8000: 2.156534\n",
+      "Minibatch accuracy: 78.9%\n",
+      "Validation accuracy: 86.9%\n",
+      "Minibatch loss at step 8500: 1.619192\n",
+      "Minibatch accuracy: 89.1%\n",
+      "Validation accuracy: 87.2%\n",
+      "Minibatch loss at step 9000: 1.568296\n",
+      "Minibatch accuracy: 85.2%\n",
+      "Validation accuracy: 87.2%\n",
+      "Minibatch loss at step 9500: 1.312449\n",
+      "Minibatch accuracy: 89.1%\n",
+      "Validation accuracy: 87.4%\n",
+      "Minibatch loss at step 10000: 1.246561\n",
+      "Minibatch accuracy: 87.5%\n",
+      "Validation accuracy: 87.7%\n",
+      "Test accuracy: 94.1%\n"
+     ]
+    }
+   ],
+   "source": [
+    "batch_size = 128\n",
+    "hidden_size = 1024\n",
+    "num_steps=10001\n",
+    "reg = 1e-3\n",
+    "dropout = 0.5\n",
+    "\n",
+    "\n",
+    "graph = tf.Graph()\n",
+    "with graph.as_default():\n",
+    "    tf_train_dataset = tf.placeholder(tf.float32, shape=(batch_size, image_size * image_size))\n",
+    "    tf_train_labels = tf.placeholder(tf.float32, shape=(batch_size, num_labels))\n",
+    "    tf_valid_dataset = tf.constant(valid_dataset)\n",
+    "    tf_test_dataset = tf.constant(test_dataset)\n",
+    "\n",
+    "    W1 = tf.Variable(tf.truncated_normal([image_size * image_size, hidden_size]))\n",
+    "    b1 = tf.Variable(tf.zeros([hidden_size]))\n",
+    "    W2 = tf.Variable(tf.truncated_normal([hidden_size, num_labels]))\n",
+    "    b2 = tf.Variable(tf.zeros([num_labels]))\n",
+    "    \n",
+    "    h1 = tf.nn.relu(tf.matmul(tf_train_dataset, W1) + b1)\n",
+    "\n",
+    "    logits = tf.matmul(tf.nn.dropout(h1, dropout), W2) + b2\n",
+    "    loss = tf.reduce_mean(tf.nn.softmax_cross_entropy_with_logits(logits=logits, labels=tf_train_labels))\n",
+    "    loss += reg * (tf.nn.l2_loss(W1) + tf.nn.l2_loss(W2))\n",
+    "\n",
+    "    global_step = tf.Variable(0, trainable=False)\n",
+    "    learning_rate = tf.train.exponential_decay(0.5, global_step, 1000, 0.9)\n",
+    "    optimizer = tf.train.GradientDescentOptimizer(learning_rate).minimize(loss, global_step=global_step)\n",
+    "\n",
+    "\n",
+    "    train_prediction = tf.nn.softmax(tf.matmul(tf.nn.relu(tf.matmul(tf_train_dataset, W1) + b1) * dropout, W2) + b2)\n",
+    "    valid_prediction = tf.nn.softmax(tf.matmul(tf.nn.relu(tf.matmul(tf_valid_dataset, W1) + b1) * dropout, W2) + b2)\n",
+    "    test_prediction  = tf.nn.softmax(tf.matmul(tf.nn.relu(tf.matmul(tf_test_dataset,  W1) + b1) * dropout, W2) + b2)\n",
+    "\n",
+    "with tf.Session(graph=graph) as session:\n",
+    "    tf.global_variables_initializer().run()\n",
+    "    print(\"Initialized\")\n",
+    "\n",
+    "    for step in range(num_steps):\n",
+    "        offset = (step * batch_size) % (train_labels.shape[0] - batch_size)\n",
+    "        batch_data = train_dataset[offset:(offset + batch_size), :]\n",
+    "        batch_labels = train_labels[offset:(offset + batch_size), :]\n",
+    "\n",
+    "        feed_dict = {tf_train_dataset : batch_data, tf_train_labels : batch_labels}\n",
+    "        _, l, predictions = session.run([optimizer, loss, train_prediction], feed_dict=feed_dict)\n",
+    "\n",
+    "        if (step % 500 == 0):\n",
+    "            print(\"Minibatch loss at step %d: %f\" % (step, l))\n",
+    "            print(\"Minibatch accuracy: %.1f%%\" % accuracy(predictions, batch_labels))\n",
+    "            print(\"Validation accuracy: %.1f%%\" % accuracy(valid_prediction.eval(), valid_labels))\n",
+    "\n",
+    "    print(\"Test accuracy: %.1f%%\" % accuracy(test_prediction.eval(), test_labels))"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
