Proved I could use GPU. Clean up a bit on Assignment 5.

--- a/5_word2vec.ipynb
+++ b/5_word2vec.ipynb
@@ -883,7 +883,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Idea from https://github.com/budmitr/udacity-deep-learning/blob/master/5_word2vec.ipynb"
+    "Cheat idea from https://github.com/budmitr/udacity-deep-learning/blob/master/5_word2vec.ipynb"
    ]
   },
   {
